--- a/public/styles.css
+++ b/public/styles.css
@@ -132,17 +132,17 @@ nav ul li a:hover::after {
     display: none;
 }
 #menu-column.show  {
-    border-radius: 5px;
     padding: 15px;
     display: block;
     position: fixed;
     top:55px;
     right: 0;
-    background-color: rgba(224, 107, 107, 0.6);
+    background-color: rgba(0, 0, 0, 0.6);
     font-size: large;
     width: 130px;
     height: calc(100vh - 100px);
     line-height: 280%;
+    transition: 0.5s;
     
 }
 #menu{
@@ -286,6 +286,12 @@ hr{
     #ham-footer{
         display: none;
     }
+    #menu-column.show{
+        display: none;
+    }
+    #footer-list.show-footer{
+        display:none;
+    }
     #menu-item  .nav{
         display: block;
     }
@@ -417,7 +423,6 @@ hr{
     cursor: pointer;
     color:bisque;
 }
-
 #footer-list.show-footer{
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.7);
@@ -428,6 +433,7 @@ hr{
     height: 100px;
     padding: 0px 30px;
     padding-top: 20px;
+    transition: 0.5s;
 }
 #footer-list{
     display: none;
@@ -443,9 +449,8 @@ address{
     width: 130px;
     background-color: rgb(137, 135, 134);
 }
-
-#ham-footer {
-    padding: 2px;
+#ham-footer {    
+padding: 2px;
 position: absolute;
 bottom: 10px;
 right: 20px;
@@ -453,13 +458,11 @@ border: 0;
 color:#b54769;
 background-color: black;
 }
-
 #ham-footer:hover {
 padding: 4px;
 background-color: rgba(255, 255, 255, 0.287);  
 color:coral;
 }
-
 #profile{
     width: 100vw;
     margin-right: 30px;
