--- a/view/index.html
+++ b/view/index.html
@@ -36,9 +36,9 @@
             </ul>
             </nav>
             
-        <div id="header-text"> 
-            <p> Front-end / Back-end Developer </p>
+        <div id="header-text">             
             <h2> Hi, I'm Zory currently living in Australia.</h2>
+            <p> Front-end / Back-end Developer </p>
         </div>
         
     </section>  <!-- end header -->    
@@ -225,7 +225,7 @@
     <div>
         <ul id="footer-list">
             <li><a class="author"  href="https://codepen.io/Zory" target="_blank">Zory St</a></li>
-            <li><a class="author"   href="https://www.freecodecamp.org/Zory" target="_blank">my freeCodeCamp profile</a></li>
+            <li><a class="author"   href="https://www.freecodecamp.org/Zory" target="_blank">ZS profile</a></li>
         </ul>                  
     </div> 
     <button id="ham-footer"> LINKS</button>
@@ -256,7 +256,7 @@
 
         function toggleList(){  
             if(footerList.classList.contains('show-footer')){ 
-                menuList.style.height = "calc(100vh - 200px)";    
+                menuList.style.height = "calc(100vh - 195px)";    
                 menuList.classList.toggle('show');      
             }   else{
                 menuList.style.height = "calc(100vh - 100px)";    
