--- a/public/styles.css
+++ b/public/styles.css
@@ -14,8 +14,8 @@
    /*  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
 }
 body{
-    background: rgb(53, 51, 55);
-    color:beige;    
+    background: rgb(50, 50, 50);
+    color:whitesmoke;    
 }
 .container{ 
     padding: 0px;   
@@ -49,12 +49,13 @@ nav ul li{
     align-items: center;
 }
 nav ul li a {
-    color:rgb(255, 238, 196);
+    color:rgb(225, 225, 225);
     text-decoration: none;
     position: relative;
 }
 nav ul li a:hover {
     color:white;
+    text-shadow: 1px 1px rgb(196, 191, 191);
     text-decoration: none;
     position: relative;
 }
@@ -71,7 +72,7 @@ nav ul li a:hover::after {
     content: '';
     width: 100%;
     height: 3px;
-    background-color: rgb(171, 144, 173);
+    background-color:coral;
     position: absolute;
 }
 
@@ -132,6 +133,9 @@ nav ul li a:hover::after {
 #menu-column {
     display: none;
 }
+#menu-column.show li{
+margin: 15px 0;
+}
 #menu-column.show  {
     padding: 15px;
     display: block;
@@ -142,7 +146,6 @@ nav ul li a:hover::after {
     font-size: large;
     width: 125px;
     height: calc(100vh - 100px);
-    line-height: 280%;
     transition: 0.5s;
     
 }
