--- a/view/index.html
+++ b/view/index.html
@@ -37,7 +37,7 @@
             </nav>
             
         <div id="header-text">             
-            <h2> Hi, I'm Zory currently living in Australia.</h2>
+            <h2> Hi, I'm Zory.</h2>
             <p> Front-end / Back-end Developer </p>
         </div>
         
