--- a/public/styles.css
+++ b/public/styles.css
@@ -107,7 +107,8 @@ nav ul li a:hover::after {
     color:white;
     width: 120px;
     height: calc(var(--navBar) - 2 * var(padding));
-    margin: 5px 10px
+    margin: 5px 10px;
+    z-index:1;
 }
 
 .navbar{
