--- a/view/index.html
+++ b/view/index.html
@@ -18,7 +18,7 @@
     <section id="header" >  
             <div class="overlay"></div>              
             <nav id="navbar">
-            <a href="#header"><img src="../pictures/logo03.jpg" class="logo"></a> 
+            <a href="#header"><img src="../pictures/logo03-1.jpg" class="logo"></a> 
             <div class="navbar"> 
             <ul id ="menu-item">
                 <li><a class="nav" href="#welcome-section">WELCOME</a></li>
