--- a/view/index.html
+++ b/view/index.html
@@ -102,107 +102,224 @@
             <h1 class="projects"> My Projects </h1>  
             <div id="card-1" class="card-1 active-c">
                 <div id="p-card" >             
-                <div  class="project-tile">                
-                    <a href="https://codepen.io/Zory/pen/GRQWbvd" target="_blank">                    
+                <div  class="project-tile">                   
                         <img id="project-pic" src="../pictures/Clock.jpg"  alt="25 + 5 Clock"/>
                         <hr>  25 + 5 Clock
-                    </a>
+
+                    <div id="filter">
+                        <a href="https://codepen.io/Zory/pen/GRQWbvd" target="_blank">                    
+                        <hr> 
+                        <h4>JavaScript <br> 25 + 5 Clock</h4>
+                        <p> This App is Front End Development Libraries project built with React.</p> 
+                        <hr> </a>
+                    </div>     
                 </div>					 	
-                <div  class="project-tile" >                
-                    <a href="https://codepen.io/Zory/pen/eYVZXLP" target="_blank">
+                <div  class="project-tile" > 
                         <img id="project-pic" src="../pictures/drumMachine.jpg"  alt="Drum Machine"/>
-                        <hr> Drum Machine
-                    </a>
+                        <hr> Drum Machine                    
+                    <div id="filter">
+                        <a href="https://codepen.io/Zory/pen/eYVZXLP" target="_blank">                    
+                        <hr> 
+                        <h4>JavaScript Drum Machine</h4>
+                        <p> This App is Front End Development Libraries project built with React.</p> 
+                        <hr> </a>
+                    </div> 
                 </div>	
-                <div  class="project-tile">                
-                    <a href="https://codepen.io/Zory/pen/RwQMWge" target="_blank">
+                <div  class="project-tile">     
                         <img id="project-pic" src="../pictures/Choropleth Map.jpg"  alt="Choropleth Map"/>
                         <hr> Choropleth Map
-                    </a>
+                    <div id="filter">
+                        <a href="https://codepen.io/Zory/pen/RwQMWge" target="_blank">                    
+                        <hr> 
+                        <h4>Choropleth Map</h4>
+                        <p> This App is Data Visualization project built with HTML, JavaScript, CSS, and the D3 svg-based visualization library.</p> 
+                        <hr> </a>
+                    </div> 
                 </div>	
-                <div  class="project-tile" >                
-                    <a href="https://codepen.io/Zory/pen/yLpZZxE" target="_blank">
+                <div  class="project-tile" >   
                         <img id="project-pic" src="../pictures/Quotes.jpg"  alt="Random Quotes"/>
                         <hr>Quote Machine
-                    </a>
+                    <div id="filter">
+                        <a href="https://codepen.io/Zory/pen/yLpZZxE" target="_blank">                    
+                        <hr> 
+                        <h4>JavaScript Quote Machine</h4>
+                        <p> This App is Front End Development Libraries project built with React.</p> 
+                        <hr> </a>
+                    </div> 
                 </div>	                 
             </div> 
             <div class="pr-list">
                 <ul  class="next">
-                   <li><a class="btn btn-light" id="next-1" onclick="openPCard('card-2', 'card-1')">NEXT</a></li>               
+                   <li><a class="btn btn-light" id="next" onclick="openPCard('card-2', 'card-1')">NEXT</a></li>               
                </ul> 
            </div>
             </div><!-- end project card 1 -->
             <div id="card-2" class="card-2">
                  <div id="p-card">             
-                <div  class="project-tile">                
-                    <a href="https://codepen.io/Zory/pen/oNEZrNz" target="_blank">                    
-                        <img id="project-pic" src="../pictures/Calculator.jpg"  alt="Calculator"/>
-                        <hr>  Calculator
-                    </a>
+                <div  class="project-tile">  
+                    <img id="project-pic" src="../pictures/Calculator.jpg"  alt="Calculator"/> 
+                    <hr> Calculator
+                    <div id="filter">
+                        <a href="https://codepen.io/Zory/pen/oNEZrNz" target="_blank">                    
+                        <hr> 
+                        <h4>JavaScript Calculator</h4>
+                        <p> This App is Front End Development Libraries project built with React.</p> 
+                        <hr> </a>
+                    </div>             
+                    
                 </div>					 	
                 <div  class="project-tile" >                
-                    <a href="https://codepen.io/Zory/pen/jOZzbqO" target="_blank">
                         <img id="project-pic" src="../pictures/HeatMap.jpg"  alt="Heat Map"/>
                         <hr> Heat Map
-                    </a>
+                    <div id="filter">
+                        <a href="https://codepen.io/Zory/pen/jOZzbqO" target="_blank">                    
+                        <hr> 
+                        <h4>Heat Map</h4>
+                        <p> This App is Data Visualization project built with HTML, JavaScript, CSS, and the D3 svg-based visualization library.</p> 
+                        <hr> </a>
+                    </div> 
                 </div>	
                 <div  class="project-tile">                
-                    <a href="https://codepen.io/Zory/pen/JjpLYZL" target="_blank">
                         <img id="project-pic" src="../pictures/TreeMapDiagram.jpg"  alt="Treemap Diagram"/>
                         <hr> Treemap Diagram
-                    </a>
+                    <div id="filter">
+                        <a href="https://codepen.io/Zory/pen/JjpLYZL"  target="_blank">                    
+                        <hr> 
+                        <h4>Treemapmap Diagram</h4>
+                        <p> This App is Data Visualization project built with HTML, JavaScript, CSS, and the D3 svg-based visualization library.</p> 
+                        <hr> </a>
+                    </div> 
                 </div>	
                 <div  class="project-tile" >                
-                    <a href="https://codepen.io/Zory/pen/yLpZZxE" target="_blank">
                         <img id="project-pic" src="../pictures/Scatterplot Graph.jpg"  alt="Scatterplot Graph"/>
-                        <hr>Scatterplot Graph
-                    </a>
+                        <hr> Scatterplot Graph
+                    <div id="filter">
+                        <a href="https://codepen.io/Zory/pen/LYQdVOR"  target="_blank">                    
+                        <hr> 
+                        <h4>Scatterplot Graph</h4>
+                        <p> This App is Data Visualization project built with HTML, JavaScript, CSS, and the D3 svg-based visualization library.</p> 
+                        <hr> </a>
+                    </div> 
                 </div>	                 
             </div> 
             <div  class="pr-list">
                 <ul id="row" class="next">
-                   <li><a class="btn btn-light" id="next-2" onclick="openPCard('card-1', 'card-2')">PREVIOUS</a></li>               
-                   <li><a class="btn btn-light" id="prev-2" onclick="openPCard('card-3', 'card-2')">NEXT</a></li>               
+                   <li><a class="btn btn-light" id="next" onclick="openPCard('card-1', 'card-2')">PREVIOUS</a></li>               
+                   <li><a class="btn btn-light" id="prev" onclick="openPCard('card-3', 'card-2')">NEXT</a></li>               
                </ul> 
            </div>
             </div><!-- end project card 2 -->          
             <div id="card-3" class="card-3">
                  <div id="p-card">             
-                <div  class="project-tile">                
-                    <a href="https://codepen.io/Zory/pen/oNEqXLx" target="_blank">                    
+                <div  class="project-tile">                                   
                         <img id="project-pic" src="../pictures/GDP graph.jpg"  alt="Bar Chart"/>
                         <hr>  Bar Chart
-                    </a>
+                    <div id="filter">
+                        <a href="https://codepen.io/Zory/pen/oNEqXLx"  target="_blank">                    
+                        <hr> 
+                        <h4>Bar Chart</h4>
+                        <p> This App is Data Visualization project built with HTML, JavaScript, CSS, and the D3 svg-based visualization library.</p> 
+                        <hr> </a>
+                    </div>
                 </div>					 	
-                <div  class="project-tile" >                
-                    <a href="https://codepen.io/Zory/pen/jOZbEqN" target="_blank">
+                <div  class="project-tile" >           
                         <img id="project-pic" src="../pictures/Previewer.jpg"  alt="Markdown Previewer"/>
                         <hr> Markdown Previewer
-                    </a>
+                    <div id="filter">
+                        <a href="https://codepen.io/Zory/pen/jOZbEqN" target="_blank">                    
+                        <hr> 
+                        <h4>JavaScript Markdown Previewer</h4>
+                        <p> This App is Front End Development Libraries project built with React.</p> 
+                        <hr> </a>
+                    </div> 
                 </div>	
                 <div  class="project-tile">                
-                    <a href="https://boilerplate-project-metricimpconverter.zorrey.repl.co/" target="_blank">
                         <img id="project-pic" src="../pictures/Metric-ImperialConverter.jpg"  alt="Metric/Imperial Converter
                         "/>
                         <hr> Metric/Imperial Converter
-
-                    </a>
+                    <div id="filter">
+                        <a href="https://boilerplate-project-metricimpconverter.zorrey.repl.co/" target="_blank">                    
+                        <hr> 
+                        <h4>Metric/Imperial Converter</h4>
+                        <p> This full stack JavaScript app is built with Node.js, Express.js and tested with Mocha and Chai.</p> 
+                        <hr> </a>
+                    </div> 
                 </div>	
                 <div  class="project-tile" >                
-                    <a href="https://issue-tracker.zorrey.repl.co/" target="_blank">
                         <img id="project-pic" src="../pictures/Issue Tracker.jpg"  alt="Issue Tracker"/>
                         <hr>Issue Tracker
-                    </a>
+                    <div id="filter">
+                        <a href="https://issue-tracker.zorrey.repl.co/" target="_blank">                    
+                        <hr> 
+                        <h4>Issue Tracker</h4>
+                        <p> This full stack JavaScript app is built with Node.js, Express.js and tested with Mocha and Chai.</p> 
+                        <hr> </a>
+                    </div> 
                 </div>	                 
             </div> 
             <div  class="pr-list">
                 <ul id="row" class="next">
-                   <li><a class="btn btn-light" id="next-2" onclick="openPCard('card-2', 'card-3')">PREVIOUS</a></li>               
-                                 
+                   <li><a class="btn btn-light" id="next" onclick="openPCard('card-2', 'card-3')">PREVIOUS</a></li>               
+                   <li><a class="btn btn-light" id="prev" onclick="openPCard('card-4', 'card-3')">NEXT</a></li>                        
                </ul> 
            </div>
-            </div><!-- end project card 3-->          
+            </div><!-- end project card 3-->   
+            
+            <div id="card-4" class="card-4">
+                <div id="p-card">             
+               <div  class="project-tile">                                   
+                       <img id="project-pic" src="../pictures/sudoku.jpg"  alt="Sudoku"/>
+                       <hr>  Sudoku Solver
+                   <div id="filter">
+                       <a href="https://sudoku-solver.zorrey.repl.co/"  target="_blank">                    
+                       <hr> 
+                       <h4>Sudoku Solver</h4>
+                       <p> This full stack JavaScript app is built with Node.js, Express.js and tested with Mocha and Chai.</p> 
+                       <hr> </a>
+                   </div>
+               </div>					 	
+               <div  class="project-tile" >           
+                       <img id="project-pic" src="../pictures/translator.jpg"  alt="Translator"/>
+                       <hr> American / British English Translator
+                   <div id="filter">
+                       <a href="https://American-British-Translator.zorrey.repl.co" target="_blank">                    
+                       <hr> 
+                       <h4>American / British English Translator</h4>
+                       <p> This full stack JavaScript app is built with Node.js, Express.js and tested with Mocha and Chai.</p> 
+                       <hr> </a>
+                   </div> 
+               </div>	
+               <div  class="project-tile">                
+                       <img id="project-pic" src="../pictures/Metric-ImperialConverter.jpg"  alt="Metric/Imperial Converter
+                       "/>
+                       <hr> Metric/Imperial Converter
+                   <div id="filter">
+                       <a href="https://boilerplate-project-metricimpconverter.zorrey.repl.co/" target="_blank">                    
+                       <hr> 
+                       <h4>Metric/Imperial Converter</h4>
+                       <p> This full stack JavaScript app is built with Node.js, Express.js and tested with Mocha and Chai.</p> 
+                       <hr> </a>
+                   </div> 
+               </div>	
+               <div  class="project-tile" >                
+                       <img id="project-pic" src="../pictures/Issue Tracker.jpg"  alt="Issue Tracker"/>
+                       <hr>Issue Tracker
+                   <div id="filter">
+                       <a href="https://issue-tracker.zorrey.repl.co/" target="_blank">                    
+                       <hr> 
+                       <h4>Issue Tracker</h4>
+                       <p> This full stack JavaScript app is built with Node.js, Express.js and tested with Mocha and Chai.</p> 
+                       <hr> </a>
+                   </div> 
+               </div>	                 
+           </div> 
+           <div  class="pr-list">
+               <ul id="row" class="next">
+                  <li><a class="btn btn-light" id="next" onclick="openPCard('card-3', 'card-4')">PREVIOUS</a></li>               
+                                
+              </ul> 
+          </div>
+           </div><!-- end project card 4-->  
                         
         </section> <!--  end projects -->
         <!-- <script  src="../public/index.js"></script> -->
