--- a/view/index.html
+++ b/view/index.html
@@ -252,7 +252,7 @@
                         <a href="https://issue-tracker.zorrey.repl.co/" target="_blank">                    
                         <hr> 
                         <h4>Issue Tracker</h4>
-                        <p> This full stack JavaScript app is built with Node.js, Express.js and tested with Mocha and Chai.</p> 
+                        <p> This full stack JavaScript app is built with Node.js, Express.js, MongoDB Database and tested with Mocha and Chai.</p> 
                         <hr> </a>
                     </div> 
                 </div>	                 
@@ -290,25 +290,24 @@
                    </div> 
                </div>	
                <div  class="project-tile">                
-                       <img id="project-pic" src="../pictures/Metric-ImperialConverter.jpg"  alt="Metric/Imperial Converter
-                       "/>
-                       <hr> Metric/Imperial Converter
+                       <img id="project-pic" src="../pictures/library.jpg"  alt="Personal Library"/>
+                       <hr> Personal Library
                    <div id="filter">
-                       <a href="https://boilerplate-project-metricimpconverter.zorrey.repl.co/" target="_blank">                    
+                       <a href="https://library-main.zorrey.repl.co" target="_blank">                    
                        <hr> 
-                       <h4>Metric/Imperial Converter</h4>
-                       <p> This full stack JavaScript app is built with Node.js, Express.js and tested with Mocha and Chai.</p> 
+                       <h4>Personal Library</h4>
+                       <p> This full stack JavaScript app is built with Node.js, Express.js, MongoDB database and tested with Mocha and Chai.</p> 
                        <hr> </a>
                    </div> 
                </div>	
                <div  class="project-tile" >                
-                       <img id="project-pic" src="../pictures/Issue Tracker.jpg"  alt="Issue Tracker"/>
-                       <hr>Issue Tracker
+                       <img id="project-pic" src="../pictures/Ex Tracker.jpg"  alt="Exercise tracker"/>
+                       <hr>Exercise tracker
                    <div id="filter">
-                       <a href="https://issue-tracker.zorrey.repl.co/" target="_blank">                    
+                       <a href="https://exercisetracker.zorrey.repl.co" target="_blank">                    
                        <hr> 
-                       <h4>Issue Tracker</h4>
-                       <p> This full stack JavaScript app is built with Node.js, Express.js and tested with Mocha and Chai.</p> 
+                       <h4>Exercise tracker</h4>
+                       <p> This full stack JavaScript app is built with Node.js, Express.js,Mongoose-MongoDB database and tested with Mocha and Chai.</p> 
                        <hr> </a>
                    </div> 
                </div>	                 
