--- a/public/styles.css
+++ b/public/styles.css
@@ -222,6 +222,7 @@ margin: 15px 0;
     box-shadow: rgb(194, 192, 192) 5px 5px;  
     color:black; 
     transition: 0.5s;
+    text-align: center;
 }
 #filter a{
    color: white; 
@@ -257,7 +258,7 @@ margin: 15px 0;
 .project-tile img{
     border-radius: 8px;
     width: 100%;
-    height:80%; 
+    height:75%; 
     overflow: hidden; 
     transition: transform 0.5s; 
 }
