handle menu list

--- a/view/index.html
+++ b/view/index.html
@@ -372,6 +372,22 @@
         const menuList = document.getElementById("menu-column"); 
         const footerList = document.getElementById("footer-list");
 
+        function handleList(){
+            w = window.innerWidth;
+            h = window.innerHeight;
+            if(h<300){
+                footerList.style.right = "125px";
+                menuList.style.height = `${h-100}px`;    
+                menuList.classList.add('show');
+                footerList.classList.remove('show-footer');
+            }
+            if(h>=300 && w<700){
+                footerList.style.right = "0px"; 
+                menuList.style.height = `${h-100}px`;  
+                menuList.classList.add('show');
+                footerList.classList.remove('show-footer');
+            }
+        }
         function toggleList(){ 
             w = window.innerWidth;
             h = window.innerHeight;
@@ -394,8 +410,7 @@
         function toggleFooterList(){
 
             w = window.innerWidth;
-             h = window.innerHeight;
-             console.log("w-h", w ,h);
+            h = window.innerHeight;
 
             if(h<300){
                 footerList.style.right = "125px";
@@ -432,6 +447,8 @@
         menuButton.addEventListener('click' , toggleList);
         footerButton.addEventListener('click' , toggleFooterList);   
         window.addEventListener('resize', checkWin);
+        window.addEventListener('resize', handleList);
+
 
     </script>
 </body>
